2004-09-27  Damien Carbery <damien.carbery@sun.com>

	Fixes #153629

	* tools/browser/bonobo-browser.c: include locale.h.

2004-09-25  Matthias Clasen  <mclasen@redhat.com>

	* bonobo/bonobo-ui-preferences.c (bonobo_ui_preferences_get_toolbar_style): 
	Match the prototype.

2004-09-25  Federico Mena Quintero  <federico@ximian.com>

	* Merged the fixes from the toolbar-rework branch.

2004-09-21  Rodrigo Moya <rodrigo@novell.com>

	* tools/Makefile.am: added new tools directory.

	* tools/browser/*: get the Bonobo component browser from
	bonobo-support module.

	* configure.in:
	* Makefile.am: added new directories to the build.

2004-09-14  Tomasz Kłoczko <kloczek@pld.org.pl>

	* configure.in: remove AC_SUBST() for CFLAGS, CPPFLAGS and LDFLAGS
	  variables (substed by default).

2004-09-13  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.8.0.

2004-09-08  Gora Mohanty  <gmohanty@cvs.gnome.org>
                                                                                
        * configure.in: Added 'or' to ALL_LINGUAS.
  
2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.

2004-08-11  Kjartan Maraas  <kmaraas@gnome.org>

	* bonobo/bonobo-control.c: (bonobo_control_get_ambient_properties),
	(bonobo_control_set_transient_for): NULL vs 0 stuff.
	* bonobo/bonobo-dock-layout.c: (bonobo_dock_layout_create_string):
	Same.
	* bonobo/bonobo-selector.c: (bonobo_selector_instance_init),
	(bonobo_selector_set_property): Same here too.
	* bonobo/bonobo-socket.c: Use correct type for the bitfield.
	* bonobo/bonobo-ui-preferences.c: (keys_changed_fn):
	gtk_idle_add() is deprecated. Use g_idle_add instead.
	* bonobo/bonobo-ui-sync-status.c: 
	(impl_bonobo_ui_sync_status_state): Cast to avoid a warning.
	* bonobo/bonobo-ui-sync-toolbar.c: (get_dock_item): Fix warning.
	* bonobo/bonobo-window.c: (bonobo_window_instance_init):
	NULL vs 0 again
	* samples/compound-doc/container/document.c: (sample_doc_new):