@@ -1,3 +1,12 @@
+2004-09-29 Matthias Clasen <mclasen@redhat.com>
+
+	Merged from the gnome-2-8 branch by Federico Mena Quintero <federico@ximian.com>:
+
+	* bonobo/bonobo-ui-toolbar-control-item.c: Remove a 
+	broken and unneeded finalizer, avoid warnings when
+	toolbars are destroyed, and make control toolitems
+	non-homogeneous.
+
 2004-09-27  Damien Carbery <damien.carbery@sun.com>
 
 	Fixes #153629
